--- a/gb/23/1/13/n13906350.md
+++ b/gb/23/1/13/n13906350.md
@@ -1,61 +1,50 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>台股收涨92点周线连2红 新台币汇价创逾4个月新高</h2>
-
 <h6></h6>
 <hr>
-<p>【大纪元2023年01月13日讯】（大纪元记者张原彰报导）美国在12日公布12月消费者物价指数（CPI）年增率，呈现连6个月下滑，激励美股连3涨，<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%8F%B0%E8%82%A1.md#1">台股</a>13日开盘迎来大涨，开高走高，最终涨幅略微收敛，收涨92.49点，收14824.13点，成交量1819亿元。新台币兑美元汇率因<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%A4%96%E8%B5%84.md#1">外资</a>大举汇入，终场收在30.387元，升值7.1分，汇价写逾4个月新高。</p>
-<p>美12日公布消费者物价指数（CPI）年增6.5%、核心CPI年增5.7%，虽低于市场预期，但仍激励美股四大指数收涨，<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%8F%B0%E8%82%A1.md#1">台股</a>受美股连动，加权指数一度上涨逾200点，但在追价意愿不足下，尾盘涨幅收敛，上涨92.49点，收在14824.13点，成交金额新台币1819.69亿元。</p>
+<p>【大纪元2023年01月13日讯】（大纪元记者张原彰报导）美国在12日公布12月消费者物价指数（CPI）年增率，呈现连6个月下滑，激励美股连3涨，台股13日开盘迎来大涨，开高走高，最终涨幅略微收敛，收涨92.49点，收14824.13点，成交量1819亿元。新台币兑美元汇率因外资大举汇入，终场收在30.387元，升值7.1分，汇价写逾4个月新高。</p>
+<p>美12日公布消费者物价指数（CPI）年增6.5%、核心CPI年增5.7%，虽低于市场预期，但仍激励美股四大指数收涨，台股受美股连动，加权指数一度上涨逾200点，但在追价意愿不足下，尾盘涨幅收敛，上涨92.49点，收在14824.13点，成交金额新台币1819.69亿元。</p>
 <p>台积电受惠于12日法说会释出的利多消息，台积电ADR在12日收盘大涨6.4%，连五涨，收在87美元，影响台积电在大盘走势，在13日重新站上500元整数大关，收在500元整数关卡。</p>
-<p><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%A4%96%E8%B5%84.md#1">外资</a>在台股买超逾300亿元，新台币在外资汇入的加持上，推升新台币汇率一早劲扬1.48角，最高升抵30.31元，创下2022年8月底以来新高，最终收30.387元，升7.1分，成交金额10.74亿美元。</p>
+<p>外资在台股买超逾300亿元，新台币在外资汇入的加持上，推升新台币汇率一早劲扬1.48角，最高升抵30.31元，创下2022年8月底以来新高，最终收30.387元，升7.1分，成交金额10.74亿美元。</p>
 <p>责任编辑：玉珍</p>
-
-<hr>
-
-
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/16/12/2/n8552713.md#1">台股失血 11月遭外资提款逾千亿</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/16/12/7/n8566467.md#1">王美花：外资来台很少不准  外界别误会</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/16/12/12/n8583310.md#1">iPhone 8大改款  外资最爱这5档蘋概股</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/1/n13897124.md#1">美股反弹无力！ 台股2023年开红盘压力仍重</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/9/n13903158.md#1">台积电领涨 台股大涨378点收最高14752点</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/12/n13905462.md#1">兔年台股聚焦四大灰犀牛 金管会：护盘措施尚不退场</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/28/n13960395.md#1">嘉义铁路高架化 预计2025年底通车</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/28/n13960397.md#1">屏东受刑人监外作业 攻击果农抢车逃脱</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/28/n13960398.md#1">地方创生无专法 台立委提地方创生促进法</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/28/n13960403.md#1">东非狒狒意外死 立委：动保政策通盘检讨</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/16/12/2/n8552713.md#1">台股失血 11月遭外资提款逾千亿</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/16/12/7/n8566467.md#1">王美花：外资来台很少不准  外界别误会</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/16/12/12/n8583310.md#1">iPhone 8大改款  外资最爱这5档蘋概股</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/1/1/n13897124.md#1">美股反弹无力！ 台股2023年开红盘压力仍重</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/1/9/n13903158.md#1">台积电领涨 台股大涨378点收最高14752点</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/1/12/n13905462.md#1">兔年台股聚焦四大灰犀牛 金管会：护盘措施尚不退场</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/4/n14344189.md#1">北海岸雨势惊人 新北市紧急启动一级开设</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/4/n14344161.md#1">疑预测失准影响台风假决策 气象署这么说</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/4/n14344163.md#1">黄仁勋称 Blackwell 需求疯狂 台供应链正向看待出货</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/4/n14344160.md#1">美国竞争致区域不确定性 学者：台湾要有推演</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank">人心向善 大陆当初盛况</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/20/n10073567.md#1" target="_blank">中共教育投入与民国时期的教育投入</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/9/n11374288.md#1" target="_blank">一对年轻夫妻“破镜重圆”的故事</a></li>
-<hr>
-
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/11/19/n9864134.md#1" target="_blank">毛泽东诗词宣扬暴力 为文革武斗输注能量</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/7/20/n11397207.md#1" target="_blank">宗教与民主研究院主任：感谢法轮功坚持真理</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/24/n13957926.md#1">【未解之谜】科学证明 轮回真的存在？！</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/23/n13956715.md#1">鬼使迎接 谁人来当阎罗王？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/22/n13955636.md#1">【未解之谜】记忆的迷思</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/16/n13951429.md#1">《易》说《道德经》：正负体系而非０１体系的双重证明</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/17/n13952483.md#1">【古道人生】捕风捉影无事生非而造成三人死亡</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/22/n13956218.md#1">【报料传真】王鹏生死逃亡 为下一代不变成粉红</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/24/n13957861.md#1">【百年真相】江西帮覆灭 曾庆红折腾至死？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/28/n13960124.md#1">【军事热点】俄核升级对乌贫铀弹 说为乌克兰人民着想</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/23/n13957059.md#1">分析：获F-35技术升级 F-16战机令歼-10难匹敌</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/26/n13959039.md#1">中美紧张局势冲击工厂 中国最富裕县遭打击</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/26/n13958658.md#1">【翻墙必看】中共缺钱 开始对机关单位下手</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/26/n13959128.md#1">微博之夜红毯叫停 李冰冰等候场明星被特警赶走</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/26/n13959176.md#1">唐嫣被拦在微博之夜场外 未能领奖原因曝光</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/25/n13958372.md#1">《名侦探柯南 灰原哀物语?黑铁的神秘列车?》影评：古色古香的列车 成正邪大战舞台</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/27/n13959871.md#1">骑单车去看老狼演唱会 高圆圆与闺密开心摆拍</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/27/n13959422.md#1">李翊君开唱前找到“新突破” 自曝演出小癖好</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/25/n13958305.md#1">蓝莓、豆角农药最多！美12种污染最重蔬果出炉</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/7/n13944932.md#1">脱发是缺维生素？5部位告诉你身体缺啥营养</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/26/n13958779.md#1">哈佛85年研究揭示快乐和健康生活的秘密</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/27/n13959453.md#1">小狗为什么会歪着头？ 装可爱吗？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/27/n13959381.md#1">有一种运动可能对健康有害</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/4/n14344260.md#1">《清明上河图》化身乐高模型 打破世界纪录</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/1/n14341736.md#1">《千字文》——传世奇文，国学瑰宝</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/1/n14341684.md#1">贞观圣主（10）：指鸟为鸾 正诛佞人</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/28/n14340380.md#1">人生如戏岂堪嗟 —— 评电影《进京城》</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/3/n14343046.md#1">【古道人生】丈夫遭仇人陷害 妻子挺身来相救</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/8/n14346736.md#1">【新闻欣视角】中共“贪官经济”关键整民企</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/3/n14343384.md#1">【环球直击】中国股市低失去动力 港股大跌</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14346859.md#1">【时事金扫描】克宫出大事 乌军黑了俄国电视网</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/3/n14343180.md#1">三款SUV秋季或大幅涨价 含畅销车丰田RAV4</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/6/n14345122.md#1">红三代炫富：过生日奶奶给1.8亿 存款逾24亿</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14345627.md#1">中国经济大萧条 大量实体店十一门庭冷落</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14346019.md#1">投资3亿 刘德华新片《危机航线》或亏2亿</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14345927.md#1">那英澳门开唱遇冷 “十一”说成“五一”惹议</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14345357.md#1">韩剧《冬季恋歌》电影版 明年秋天在日本上映</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/8/n14346747.md#1">《狮子吼》“十一”档上映 2人观影 票房79元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14345538.md#1">59广播金钟周末登场 唐绮阳、五坚情将出席颁奖</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/6/n14344945.md#1">这一物可以让水龙头闪闪发光 你可能想不到</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14345615.md#1">如何去除家庭头号害虫——蟑螂？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/30/n14341564.md#1">苦瓜抗癌预防脂肪肝 一类人慎食</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/12/28/n14145199.md#1">长者自救锻炼法 逆转骨质疏松</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/8/n14346769.md#1">秋季宜多吃“白色”食物 按三阴交穴保健</a></li>
 <hr>
-
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/1/13/n13906350.htm">台股收涨92点周线连2红 新台币汇价创逾4个月新高</a></p><hr>
-
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/1/13/n13906350.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/1/13/n13906350.htm">台股收涨92点周线连2红 新台币汇价创逾4个月新高</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/23/1/13/n13906350.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
